--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.meta.xr.sdk.all": "78.0.0",
+    "com.meta.movement": "https://github.com/oculus-samples/Unity-Movement.git#v71.0.1",
+    "com.meta.xr.sdk.all": "71.0.0",
     "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.feature.development": "1.0.1",
